# traffic_violations

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  run.py
app/api/: handler.py
app/api/serializers/: traffic_officer_serializer.py  user_serializer.py  vehicle_serializer.py
app/api/templates/: index.html  list_traffic_officer.html  list_user.html  list_vehicle.html  register_traffic_officer.html  register_user.html  register_vehicle.html  update_traffic_officer.html  update_user.html  update_vehicle.html
app/api/views/: traffic_officer_views.py  user_views.py  vehicle_views.py
app/core/: contants.py  traffic_officer_service.py  user_service.py  utils.py  vehicle_service.py
app/core/commons/: inject_clients.py
app/core/models/: model.py
app/repository/: crud_interface.py  postgres_repository.py
app/tests/: test_traffic_officer.py
config/: main.py  postgres_conection.py  routes.py
docker/: docker-compose.yml
docker/app/: Dockerfile  entrypoint.sh
docker/nginx/: Dockerfile  nginx.conf
migrations/: env.py
migrations/versions/: 0fe1bca1e8a2_update_model_type_and_name.py
