[tool.poetry]
name = "traffic-violations"
version = "0.1.0"
description = ""
authors = ["Luis <luis.meza@example.com>"]
readme = "README.md"
package-mode = false

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''
[tool.black.extra]
include = '''^.*\.py$'''

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
jinja2 = "^3.1.4"
inject = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
